--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,7 @@ passlib==1.7.4
 protobuf==3.20.1
 pyasn1==0.4.8
 pycparser==2.21
+pycryptodome==3.16.0
 pydantic==1.10.2
 python-dotenv==0.21.0
 python-jose==3.3.0
